--- a/src/server/templates/transfer.html
+++ b/src/server/templates/transfer.html
@@ -382,12 +382,12 @@
 
         <div class="navigation">
             <div class="nav-links">
-                <a href="{{home_url}}" class="nav-link">🏠 Início</a>
-                <a href="{{accounts_url}}" class="nav-link">💳 Contas</a>
-                <a href="{{transfer_url}}" class="nav-link active">💸 Transferir</a>
-                <a href="{{payments_url}}" class="nav-link">📄 Pagamentos</a>
-                <a href="{{extract_url}}" class="nav-link">📊 Extrato</a>
-                <a href="{{cards_url}}" class="nav-link">💳 Cartões</a>
+                <a href="/" class="nav-link">🏠 Início</a>
+                <a href="/accounts" class="nav-link">💳 Contas</a>
+                <a href="/transfer" class="nav-link active">💸 Transferir</a>
+                <a href="/payments" class="nav-link">📄 Pagamentos</a>
+                <a href="/extract" class="nav-link">📊 Extrato</a>
+                <a href="/cards" class="nav-link">💳 Cartões</a>
             </div>
         </div>
 
